# my_xtts_v2

./: README.md  Report.md  main.py  pyproject.toml  server_tts.py
